{{$NEXT}}

1.21   2015-09-30

- Make all tests pass with both the current DateTime::Locale and the upcoming
  new version (currently still in trial releases).


1.20   2015-07-01

- The 1.18 release added the June 30, 2015 leap second to the XS code, but I
  forgot to update the corresponding pure Perl implementation in
  DateTime::LeapSecond.


1.19   2015-05-31

- If you compared a DateTime object to an undef value, you might have received
  a warning pointing to code inside DateTime.pm, instead of in your own
  code. Fixed by Jason McIntosh. GH #7.

- The 30future-tz.t could fail if run at certain very specific times. This
  should now be much less likely, unless a time zone being tested implements a
  DST change at noon (which would even more insane than DST already is by a
  huge factor). Reported by Karen Etheridge and diagnosed by Slaven Rezic. RT
  #102925.


1.18   2015-01-05

- There will be a new leap second on June 30, 2015.


1.17   2015-01-04

- No code changes from the 1.16 release.


1.16   2015-01-04 (TRIAL RELEASE)

- Test fix for systems where IVs are 4 bytes long.


1.15   2015-01-03 (TRIAL RELEASE)

- Trying this again ... Experimental fix for adding very large numbers of
  days. Previously, trying to add more than around 2^28 days could cause
  errors if the result ended up in a leap year. This is being released as a
  trial release because I'm not sure how this change will behave on a 32-bit
  Perl. Reported by KMX. RT #97046.


1.14   2015-01-03

- Accidentally released 1.13 as a non-TRIAL release. Releasing 1.13 minus the
  integer change so there's a known-safe stable release on CPAN for people to
  install.


1.13   2015-01-03

* This release was deleted from CPAN.

- Experimental fix for adding very large numbers of days. Previously, trying
  to add more than around 2^28 days could cause errors if the result ended up
  in a leap year. This is being released as a trial release because I'm not